; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_processor.c_processor_bootstrap.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_processor.c_processor_bootstrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@pset0 = common dso_local global i32 0, align 4
@pset_node0 = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@pset_node_lock = common dso_local global i32 0, align 4
@tasks = common dso_local global i32 0, align 4
@terminated_tasks = common dso_local global i32 0, align 4
@threads = common dso_local global i32 0, align 4
@corpse_tasks = common dso_local global i32 0, align 4
@processor_list_lock = common dso_local global i32 0, align 4
@master_cpu = common dso_local global i32 0, align 4
@master_processor = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @processor_bootstrap() #0 {
  %1 = call i32 @pset_init(i32* @pset0, %struct.TYPE_3__* @pset_node0)
  store i32* @pset0, i32** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @pset_node0, i32 0, i32 0), align 8
  %2 = call i32 @simple_lock_init(i32* @pset_node_lock, i32 0)
  %3 = call i32 @queue_init(i32* @tasks)
  %4 = call i32 @queue_init(i32* @terminated_tasks)
  %5 = call i32 @queue_init(i32* @threads)
  %6 = call i32 @queue_init(i32* @corpse_tasks)
  %7 = call i32 @simple_lock_init(i32* @processor_list_lock, i32 0)
  %8 = load i32, i32* @master_cpu, align 4
  %9 = call i32 @cpu_to_processor(i32 %8)
  store i32 %9, i32* @master_processor, align 4
  %10 = load i32, i32* @master_processor, align 4
  %11 = load i32, i32* @master_cpu, align 4
  %12 = call i32 @processor_init(i32 %10, i32 %11, i32* @pset0)
  ret void
}

declare dso_local i32 @pset_init(i32*, %struct.TYPE_3__*) #1

declare dso_local i32 @simple_lock_init(i32*, i32) #1

declare dso_local i32 @queue_init(i32*) #1

declare dso_local i32 @cpu_to_processor(i32) #1

declare dso_local i32 @processor_init(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
